fix: remove sections w outlines
